<resources>
    <string name="app_name">PeopleManagement</string>
    <string name="mainTitle">Add a person below</string>
    <string name="btnAdd">Add</string>
    <string name="btnDelete">Del</string>
    <string name="rbtnSortByName">Sort by name</string>
    <string name="rbtnSortBySurname">Sort by surname</string>
    <string name="editTitle">Edit a person info</string>
    <string name="hintName">Name</string>
    <string name="hintSurname">Surname</string>
    <string name="btnSave">Save</string>
</resources>
